[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "nanobind>=2.11.0",
    "numpy>=2.3.4",
]
build-backend = "scikit_build_core.build"

[project]
name = "thor-cuda"
dynamic = ["version"]
description = "Thor deep learning framework (C++/CUDA) Python bindings"
requires-python = ">=3.12"
license = { file = "../../LICENSE" }
authors = [
    { name = "Andrew Robbins" },
]
dependencies = [
    "numpy>=2.3.4",
    "ml_dtypes>=0.5.4",
    "nvidia-cuda-runtime>=13,<14",
    "nvidia-cuda-nvrtc>=13,<14",
    "nvidia-cublas>=13,<14",
    "nvidia-nvjitlink>=13,<14",
    "nvidia-cudnn-cu13>=9,<10",
]
readme = { file = "README.md", content-type = "text/markdown" }

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.6",
    "build>=1.2",
    "nanobind>=2.11.0",
    "nanobind-stubgen>=0.1.5",
    "setuptools",
    "wheel",
    "isort",
    "yapf>=0.43.0,<0.44",
]

[project.urls]
Homepage = "https://github.com/amrobbins/Thor"
Repository = "https://github.com/amrobbins/Thor"
"Bug Tracker" = "https://github.com/amrobbins/Thor/issues"

[tool.scikit-build]
# top-level CMake project
cmake.source-dir = "../.."
# Keep scikit-build’s CMake builds inside the python dir so they don’t clash with manual ./build or CLion builds.
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

wheel.packages = ["src/thor"]

[tool.scikit-build.cmake.define]
THOR_BUILD_PYTHON = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../../ThorVersion.h.in"
regex = '''(?m)^\#define\s+THOR_VERSION\s+"v?(?P<value>[^"]+)"'''
result = "{value}"

[tool.scikit-build.sdist]
include = ["src/thor/py.typed"]

[tool.pytest.ini_options]
addopts = "-s -vv"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
force_sort_within_sections = true
force_single_line = false
lines_between_sections = 1
known_first_party = ["thor"]
skip_gitignore = true
skip = ["build", "cmake-build-debug", "cmake-build-release", ".venv"]
src_paths = ["src"]
